<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/name" />
        <EditText
            android:id="@+id/et_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:hint="@string/hint_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/user_name" />
        <EditText
            android:id="@+id/et_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:hint="@string/hint_user_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/password" />
        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:hint="@string/hint_password"
            android:password="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/describe" />
        <EditText
            android:id="@+id/et_signup_desbribe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_medium"
            android:hint="@string/hint_describe"
            android:gravity="top"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/bt_register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_user"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAllCaps="false"/>

    </LinearLayout>


</LinearLayout>