<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="craterzone.database.activity.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/user_name" />
        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:hint="@string/hint_user_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/password" />
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:hint="@string/hint_password"
            android:password="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        <Button
            android:id="@+id/bt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"/>

    </LinearLayout>

</LinearLayout>
