<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/name" />
        <TextView
            android:id="@+id/tv_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/user_name" />
        <TextView
            android:id="@+id/tv_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/password" />
        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/lebel_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_medium"
            android:text="@string/describe" />
        <TextView
            android:id="@+id/tv_login_desbribe"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textSize="@dimen/font_medium"
            android:gravity="top"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="invisible"></android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/bt_login_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/bt_login_view_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewusers"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>